--- a/TriforceApp/res/layout/view_db.xml
+++ b/TriforceApp/res/layout/view_db.xml
@@ -12,23 +12,20 @@
         android:id="@+id/exitViewDB"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Exit User DB" />
+        android:text="@string/exitViewDB" />
 
     <TableLayout
         android:id="@+id/tableLayout1"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" >
 
-        <TableRow>
+        <!-- Lists how the info is displayed -->
 
-            <!-- Lists how the info is displayed -->
-            
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:text="Usernames / Passwords / Names / Emails" />
-        </TableRow>
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:text="@string/userExample" />
     </TableLayout>
 
     <!-- Begins the list of users in the database -->
@@ -37,6 +34,6 @@
         android:id="@+id/tvSQLinfo"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:text="get info from db" />
+        android:text="" />
 
 </LinearLayout>
