--- a/TriforceApp/res/layout/register.xml
+++ b/TriforceApp/res/layout/register.xml
@@ -76,19 +76,30 @@
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress" />
 
-    <!-- Register button to create new account -->
-
-    <Button
-        android:id="@+id/registerUserButton"
+    <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:text="@string/register" />
+        android:layout_height="wrap_content" >
 
-    <Button
-        android:id="@+id/cancelRegButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/cancel" />
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <!-- Register button to create new account -->
+
+            <Button
+                android:id="@+id/registerUserButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/register" />
+
+            <Button
+                android:id="@+id/cancelRegButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/cancel" />
+        </TableRow>
+    </TableLayout>
 
 </LinearLayout>
