Tasks are editable
git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@239 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/layout/edit_task_page.xml
+++ b/TriforceApp/res/layout/edit_task_page.xml
@@ -51,6 +51,13 @@
 
     <!-- Prompt for selecting the type of the task -->
 
+	<TextView
+        android:id="@+id/taskTypeTagET"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/taskType"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
     <Spinner
         android:id="@+id/newTypeOfTaskET"
         android:layout_width="match_parent"
