--- a/TriforceApp/res/layout/view_task_page.xml
+++ b/TriforceApp/res/layout/view_task_page.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="TASK VIEW"
+        android:text="@string/titleVT"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TableLayout
@@ -41,7 +41,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:contentDescription="backViewTask"
+                android:contentDescription="@string/exitET"
                 android:src="@android:drawable/ic_menu_revert" />
         </TableRow>
 
@@ -57,16 +57,20 @@
                 android:id="@+id/viewNameTag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=" Task Name: "
+                android:text="@string/taskName"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <TextView
                 android:id="@+id/viewNameTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="name"
+                android:text=""
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </TableRow>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="3dp" />
 
         <TableRow
             android:layout_width="wrap_content"
@@ -76,16 +80,20 @@
                 android:id="@+id/viewDescTag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=" Description: "
+                android:text="@string/taskDescription"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <TextView
                 android:id="@+id/viewDescTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="description"
+                android:text=""
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </TableRow>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="3dp" />
 
         <TableRow
             android:layout_width="wrap_content"
@@ -95,16 +103,20 @@
                 android:id="@+id/viewTypeTag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=" Type: "
+                android:text="@string/taskType"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <TextView
                 android:id="@+id/viewTypeTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="type"
+                android:text=""
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </TableRow>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="3dp" />
 
         <TableRow
             android:layout_width="wrap_content"
@@ -114,16 +126,20 @@
                 android:id="@+id/viewDateTag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=" Date due: "
+                android:text="@string/taskDate"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <TextView
                 android:id="@+id/viewDateTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="date"
+                android:text=""
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </TableRow>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="3dp" />
 
         <TableRow
             android:layout_width="wrap_content"
@@ -133,16 +149,20 @@
                 android:id="@+id/viewTimeTag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=" Time due: "
+                android:text="@string/taskTime"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <TextView
                 android:id="@+id/viewTimeTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="time"
+                android:text=""
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </TableRow>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="3dp" />
 
         <TableRow
             android:layout_width="wrap_content"
@@ -152,14 +172,14 @@
                 android:id="@+id/viewLocationTag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=" Location: "
+                android:text="@string/taskLocation"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <TextView
                 android:id="@+id/viewLocationTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="location"
+                android:text=""
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </TableRow>
     </TableLayout>
