--- a/TriforceApp/res/layout/main.xml
+++ b/TriforceApp/res/layout/main.xml
@@ -20,74 +20,99 @@
 
     <ImageView
         android:id="@+id/tforceLogo"
-        android:layout_width="193dp"
-        android:layout_height="0dp"
+        android:layout_width="200dp"
+        android:layout_height="240dp"
         android:layout_gravity="center"
-        android:layout_weight="0.49"
         android:contentDescription="@string/tforce_logo"
         android:src="@drawable/tforce_app_logo" />
 
     <!-- Username tag above the text field where the user inputs username -->
 
-    <TextView
-        android:id="@+id/mainUsernameTag"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/username"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <EditText
-        android:id="@+id/usernameField"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:inputType="textPersonName" />
-
-    <!-- Password tag above the text field where the user inputs password -->
-
-    <TextView
-        android:id="@+id/mainPasswordTag"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/password"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <EditText
-        android:id="@+id/passwordField"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword" />
-
-    <!-- Login button -->
-
-    <Button
-        android:id="@+id/loginButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:onClick="loginButton"
-        android:text="@string/enter" />
-
-    <!-- Register Button and Button to view Database -->
-
     <TableRow
-        android:layout_width="match_parent"
+        android:layout_width="225dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/register" >
+        android:layout_gravity="center_horizontal" >
 
-        <Button
-            android:id="@+id/viewdbButton"
+        <TextView
+            android:id="@+id/mainUsernameTag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/viewDB" />
+            android:text="@string/username"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+    </TableRow>
+
+    <TableRow
+        android:layout_width="225dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal" >
+
+        <EditText
+            android:id="@+id/usernameField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName" />
+    </TableRow>
+    <!-- Password tag above the text field where the user inputs password -->
+
+    <TableRow
+        android:layout_width="225dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal" >
+
+        <TextView
+            android:id="@+id/mainPasswordTag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/password"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+    </TableRow>
+
+    <TableRow
+        android:layout_width="225dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal" >
+
+        <EditText
+            android:id="@+id/passwordField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword" />
+    </TableRow>
+    <!-- Login button -->
+
+    <TableRow
+        android:layout_width="225dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal" >
 
         <Button
             android:id="@+id/GotoRegisterButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:onClick="registerButton"
             android:text="@string/register" />
+
+        <Button
+            android:id="@+id/loginButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="loginButton"
+            android:text="@string/enter" />
+    </TableRow>
+    <!-- Register Button and Button to view Database -->
+
+    <TableRow
+        android:layout_width="225dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal" >
+
+        <Button
+            android:id="@+id/viewdbButton"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/viewDB" />
     </TableRow>
 
 </LinearLayout>
